--- a/main.ipynb
+++ b/main.ipynb
@@ -26,6 +26,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -703,6 +710,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Validation metrics and plot reconstructed images"
    ]
   },
@@ -849,6 +863,22 @@
     "validation_dataset = datasets.Food101(root='./data', split='test', transform=transform, download=True) # we use test as validation because food101 only provide 75% training and 25% testing\n",
     "validation_loader = DataLoader(validation_dataset, batch_size=16, shuffle=False, num_workers=4)\n",
     "visualize_reconstructions(model, validation_loader, device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size='6'>DEMO using Streamlit </font>\n",
+    "<br>\n",
+    "<a href=\"https://image-reconstruction.streamlit.app/\">Image Reconstruction APP</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n"
    ]
   }
  ],
